# negfy

./: CMakeLists.txt  LICENSE  Makefile  Makefile_works_2017_03_21_simple  README.md  install_manifest.txt  main.cpp  negfy.cpp  negfy.f90
Ant/: ANT.f90  ANTMod.f90  AntG.f90.old  AntG2.f90.bak  BetheLattice.f90  CMakeLists.txt  CMakeLists.txt.bak2018-04-30  CMakeLists.txt~  Makefile  Makefile_2016-03-21_bad_executable  Makefile_2016-04-01_WORKS  Makefile~  OneDLead.f90  antcommon.f90  cluster.f90  constants.f90  correlation.f90  device.f90  g09Common.f90  numeric.f90  obj  ortho.f90  parameters.f90  preproc.F  util.f90
Default/: makefile  sources.mk
Default/AntG/: subdir.mk
Default/MatrixMultiply/: subdir.mk
HartreeFock/: CMakeLists.txt  CMakeLists.txt.bak2018-05-01  CMakeLists.txt~  HartreeFockClass.cpp  HartreeFockClass.h  Makefile  Makefile.original  Makefile.without.editions  Makefile_simple_builds_all_libraries_correct  checkpoint.cpp  checkpoint.h  dftfuncs.cpp  dftgrid.cpp  dftgrid.h  dftgridchangedarmabyeigen.cpp  dftgridchangedarmabyeigen.h  erkalebasis.cpp  erkalebasis.h  erkalebasislibrary.cpp  erkalebasislibrary.h  guess.cpp  guess.h  hartree-fock++-validate.py  hirshfeld.cpp  hirshfeld.h  linalg.cpp  linalg.h  linalg_old.cpp  linalg_old.h  main.cpp  obara-saika.cpp  obara-saika.h  scf-base.cpp  scf-fock.cpp  scf-force.cpp  scf-solvers.cpp  scf.h  trrh.cpp
mod/: antcommon.mod  antmod.mod  bethelattice.mod  cluster.mod  constants.mod  correlation.mod  device.mod  g09common.mod  get_record_mod.mod  linked_list_mod.mod  numeric.mod  onedlead.mod  orthogonalization.mod  parameters.mod  preproc.mod  util.mod
